# SDV_Research

./: .gitignore  README.md  requirements.txt
.claude/: settings.local.json
concepts/: 01_fundamentos_ml.md  02_arvores_decisao.md  03_ensemble_boosting.md  04_xgboost.md  05_metricas_avaliacao.md  06_outros_algoritmos.md  07_desbalanceamento.md  08_como_escolher.md  README.md
data/: dataset_ism_xgboost.rar
experiments/: files_desc.md
experiments/docs/: README.md  step01_pcap_parsing.md  step02_feature_extraction.md  step03_training_evaluation.md
experiments/files/: 01_parse_pcap.py  02_extract_features.py  03_train_evaluate.py  README.md  analyse.py  requirements.txt
experiments/notebooks/: 01_reproducao_kim2026.ipynb  02_pipeline_pcap_tsne.ipynb
results/ctgan/: baseline_comparison.csv  metrics_summary.json
results/no_ctgan/: metrics_summary.json
simulations/someip-sdv-network/: .clang-format  Makefile  README.md  docker-compose.yml
simulations/someip-sdv-network/config/: vsomeip_adas.json  vsomeip_clu.json  vsomeip_consumer.json  vsomeip_gps.json  vsomeip_imu.json  vsomeip_nav.json  vsomeip_pt.json  vsomeip_ste.json  vsomeip_tel.json  vsomeip_vde.json
simulations/someip-sdv-network/dashboard/: Dockerfile  app.py
simulations/someip-sdv-network/ecu_consumer/: CMakeLists.txt  Dockerfile
simulations/someip-sdv-network/ecu_gps/: CMakeLists.txt  Dockerfile
simulations/someip-sdv-network/ecu_gps/src/: gps_service.cpp
simulations/someip-sdv-network/ecu_imu/: CMakeLists.txt  Dockerfile
simulations/someip-sdv-network/ecu_imu/src/: imu_service.cpp
(+10 files in other folders)
